--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.agava.webutility": "https://github.com/forcepusher/com.agava.webutility.git#2.1.0",
+    "com.agava.yandexgames": "https://github.com/forcepusher/com.agava.yandexgames.git#11.2.1",
     "com.unity.2d.animation": "7.0.8",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.spriteshape": "7.0.6",
