--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,20 +3,22 @@
     "com.agava.webutility": "https://github.com/forcepusher/com.agava.webutility.git#3.1.0",
     "com.agava.yandexgames": "https://github.com/forcepusher/com.agava.yandexgames.git#16.0.0",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.addressables": "1.19.19",
+    "com.unity.addressables": "1.21.19",
+    "com.unity.ai.navigation": "1.1.5",
     "com.unity.cinemachine": "2.9.7",
-    "com.unity.collab-proxy": "1.17.6",
+    "com.unity.collab-proxy": "2.2.0",
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.rider": "3.0.27",
-    "com.unity.ide.visualstudio": "2.0.16",
+    "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.inputsystem": "1.4.4",
-    "com.unity.scriptablebuildpipeline": "1.20.2",
-    "com.unity.test-framework": "1.1.31",
+    "com.unity.inputsystem": "1.7.0",
+    "com.unity.memoryprofiler": "1.1.0",
+    "com.unity.scriptablebuildpipeline": "1.21.21",
+    "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.4",
+    "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.7.8",
+    "com.unity.visualscripting": "1.9.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
